Source/WebCore/rendering/PositionedLayoutConstraints.cpp
@@ -79,6 +79,7 @@ PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& render
     , m_insetBefore { 0_css_px }
     , m_insetAfter { 0_css_px }
 {
+    ASSERT(m_container);
 
     // Compute basic containing block info.
     auto containingInlineSize = renderer.containingBlockLogicalWidthForPositioned(*m_container, false);
@@ -193,6 +194,21 @@ void PositionedLayoutConstraints::captureGridArea()
     }
 }
 
+LayoutRange PositionedLayoutConstraints::extractRange(LayoutRect anchorRect)
+{
+    LayoutRange anchorRange;
+    if (BoxAxis::Horizontal == m_physicalAxis)
+        anchorRange.set(anchorRect.x(), anchorRect.width());
+    else
+        anchorRange.set(anchorRect.y(), anchorRect.height());
+
+    if (m_containingWritingMode.isBlockFlipped() && LogicalBoxAxis::Block == m_containingAxis) {
+        // Coordinate fixup for flipped blocks.
+        anchorRange.moveTo(m_containingRange.max() - anchorRange.max() + m_container->borderAfter());
+    }
+    return anchorRange;
+}
+
 void PositionedLayoutConstraints::captureAnchorGeometry()
 {
     if (!m_defaultAnchorBox)
@@ -200,14 +216,7 @@ void PositionedLayoutConstraints::captureAnchorGeometry()
 
     // Store the anchor geometry.
     LayoutRect anchorRect = Style::AnchorPositionEvaluator::computeAnchorRectRelativeToContainingBlock(*m_defaultAnchorBox, *m_renderer->containingBlock());
-    if (BoxAxis::Horizontal == m_physicalAxis)
-        m_anchorArea.set(anchorRect.x(), anchorRect.width());
-    else
-        m_anchorArea.set(anchorRect.y(), anchorRect.height());
-    if (m_containingWritingMode.isBlockFlipped() && LogicalBoxAxis::Block == m_containingAxis) {
-        // Coordinate fixup for flipped blocks.
-        m_anchorArea.moveTo(m_containingRange.max() - m_anchorArea.max() + m_container->borderAfter());
-    }
+    m_anchorArea = extractRange(anchorRect);
 
     // Adjust containing block for position-area.
     if (!m_style.positionArea())
